Move background to app, correct flicker

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -3,3 +3,59 @@ html, body {
   margin: 0;
   overflow: hidden;
 }
+
+body {
+  opacity: 0.8;
+  background: url("../../assets/allmight.jpeg"),
+  url("../../assets/groupshot.jpeg"),
+  url("../../assets/battle.jpeg"),
+  url("../../assets/dekuPunk.png"),
+  url("../../assets/endeavor.jpeg"),
+  url("../../assets/group2.jpeg"),
+  url("../../assets/hug.jpeg"),
+  url("../../assets/allmightback.jpeg"),
+  url("../../assets/deku.png"),
+  url("../../assets/allmightRaiseFist.jpeg"),
+  url("../../assets/allmight.jpeg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  animation: rotateBg 120s infinite;
+  background-size: cover;
+}
+
+@keyframes rotateBg {
+  0% {
+    background: url("../../assets/allmight.jpeg") no-repeat center center fixed;
+  }
+  10% {
+    background: url("../../assets/groupshot.jpeg") no-repeat center center fixed;
+  }
+  20% {
+    background: url("../../assets/battle.jpeg") no-repeat center center fixed;
+  }
+  30% {
+    background: url("../../assets/dekuPunk.png") no-repeat center center fixed;
+  }
+  40% {
+    background: url("../../assets/endeavor.jpeg") no-repeat center center fixed;
+  }
+  50% {
+    background: url("../../assets/group2.jpeg") no-repeat center center fixed;
+  }
+  60% {
+    background: url("../../assets/hug.jpeg") no-repeat center center fixed;
+  }
+  70% {
+    background: url("../../assets/allmightback.jpeg") no-repeat center center fixed;
+  }
+  80% {
+    background: url("../../assets/deku.png") no-repeat center center fixed;
+  }
+  90% {
+    background: url("../../assets/allmightRaiseFist.jpeg") no-repeat center center fixed;
+  }
+  100% {
+    background: url("../../assets/allmight.jpeg") no-repeat center center fixed;
+  }
+}
